force-app/main/default/objects/Current_Account__c/Current_Account__c.object-meta.xml
<CustomObject>
    <label>Current Account</label>
    <nameField>
        <label>Current Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>