force-app/main/default/objects/Current_Account__c/fields/Current_Account_City__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_City__c</fullName>
    <label>Current Account City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>