force-app/main/default/objects/Current_Account__c/fields/Current_Account_Purchase_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Purchase_Volume__c</fullName>
    <label>Current Account Purchase Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>