force-app/main/default/objects/Current_Account__c/fields/Current_Account_Remark__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Remark__c</fullName>
    <label>Current Account Remark</label>
    <type>TextArea</type>
</CustomField>