force-app/main/default/objects/Current_Account__c/fields/Current_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_State__c</fullName>
    <label>Current Account State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatesName</valueSetName>
    </valueSet>
</CustomField>