force-app/main/default/objects/Current_Account__c/fields/Current_Length_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_Length_of_Relationship__c</fullName>
    <label>Current Length of Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>