force-app/main/default/objects/Current_Account__c/fields/LT_Account_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_City__c</fullName>
    <label>LT Account City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>