force-app/main/default/objects/Current_Account__c/fields/LT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Account_Type__c</fullName>
    <label>LT Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Residential Dealer</fullName>
            </value>
            <value>
                <fullName>Commercial Dealer</fullName>
            </value>
            <value>
                <fullName>Big Box</fullName>
            </value>
            <value>
                <fullName>Flooring Contractor</fullName>
            </value>
            <value>
                <fullName>Design Showroom</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>