force-app/main/default/objects/Current_Account__c/fields/LT_Length_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>LT_Length_of_Relationship__c</fullName>
    <label>LT Length of Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>