force-app/main/default/objects/Current_Account__c/fields/Preferred_vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred vendor</label>
    <referenceTo>Preferred_vendor__c</referenceTo>
    <relationshipLabel>Current Accounts</relationshipLabel>
    <relationshipName>Current_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>